--- a/HTML.html
+++ b/HTML.html
@@ -21,15 +21,15 @@
     <div class="code-editor">
         <div class="code">
             <div class="html-code">
-                <h1><img src="images/html.png" alt="">HTML</h1>
+                <h1><img src="html.png" alt="">HTML</h1>
                 <textarea></textarea>
             </div>
             <div class="css-code">
-                <h1><img src="images/CSS.png" alt="">CSS</h1>
+                <h1><img src="CSS.png" alt="">CSS</h1>
                 <textarea></textarea>
             </div>
             <div class="js-code">
-                <h1><img src="images/js.png" alt="">JS</h1>
+                <h1><img src="js.png" alt="">JS</h1>
                 <textarea spellcheck="false"></textarea>
             </div>
         </div>
